--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -39,7 +39,7 @@ services:
       # CRAWLAB_NOTIFICATION_MAIL_SMTP_USER: username  # SMTP username SMTP 用户名
       # CRAWLAB_NOTIFICATION_MAIL_SMTP_PASSWORD: password  # SMTP password SMTP 密码
     ports:
-      - "8080:8080" # frontend port mapping 前端端口映射
+      - "8777:8080" # frontend port mapping 前端端口映射
     depends_on:
       - mongo
       - redis
@@ -65,16 +65,16 @@ services:
     #   MONGO_INITDB_ROOT_PASSWORD: password
     # volumes:
     #   - "/opt/crawlab/mongo/data/db:/data/db"  # make data persistent 持久化
-    # ports:
-    #   - "27017:27017"  # expose port to host machine 暴露接口到宿主机
+    ports:
+      - "27019:27017"  # expose port to host machine 暴露接口到宿主机
   redis:
     image: redis:latest
     restart: always
     # command: redis-server --requirepass "password" # set redis password 设置 Redis 密码
     # volumes:
     #   - "/opt/crawlab/redis/data:/data"  # make data persistent 持久化
-    # ports:
-    #   - "6379:6379"  # expose port to host machine 暴露接口到宿主机
+    ports:
+      - "6381:6379"  # expose port to host machine 暴露接口到宿主机
   # splash:  # use Splash to run spiders on dynamic pages
   #   image: scrapinghub/splash
   #   container_name: splash
